# bitbox02-firmware

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Dockerfile  Dockerfile.ubuntu  Makefile  bootloader.ld  firmware.ld
.cargo/: config.toml
.ci/: README.md  build-base-container  build-container  build-dev-container  check-container-sources-modified  check-container-version-published  publish-container  run-container-ci
.github/actions/pr-ci-common/: action.yml
.github/workflows/: _pr-ci-common.yml  ci-common.yml  ci-dev-container.yml  ci.yml  container-images.yml  pr-ci.yml  prt-ci.yml  publish-container-image.yml
messages/: bitboxbase.options  bitboxbase.proto  hww.proto
py/: load_firmware.py  send_message.py
scripts/: dockerenv.sh  generate-bindings.sh  jlink.gdb  lint-python
src/: CMakeLists.txt  bitbox-da14531-firmware.h  bt-firmware.h  common_main.c  da14531_flasher.c  da14531_flasher.h  factorysetup.c  firmware.c  firmware.h  firmware_main_loop.c  hardfault.c  hww.c  i2c_ecc.c  keystore.c  random.c  random.h  reset.c  screen.c  screen.h  screensaver.c  screensaver.h  sd.c  serial_link.c  smarteeprom.c  smarteeprom.h  system.c  u2f.c  uart.c  util.c  util.h  watchdog.c  watchdog.h  workflow_process.c  workflow_process.h
src/apps/eth/: eth_params.c  eth_verify.c
src/atecc/: atecc.c  atecc.h
src/bootloader/: bootloader.c  bootloader.h  startup.c
src/commander/: commander_btc.c
src/da14531/: da14531_handler.c  da14531_handler.h  da14531_protocol.c
src/drivers/hal/utils/src/: utils_retarget.c
src/memory/: memory.c  memory.h  memory_shared.c  memory_shared.h  nvmctrl.c  smarteeprom.c  spi_mem.c
src/optiga/: optiga.c
src/optiga-pal/: optiga.c  optiga.h  pal_crypt_mbedtls.c  pal_gpio.c  pal_i2c.c  pal_ifx_i2c_config.c  pal_logger.c  pal_os_datastore.c  pal_os_event.c  pal_os_memory.c  pal_os_timer.c  securityfunctions.c  securityfunctions.h
src/optiga/pal/: pal_ifx_i2c_config.c  pal_os_event.c
src/platform/: bitbox02_pins.h  driver_init.c  driver_init.h  platform_init.c
src/pukcc/: pukcc.c
src/qtouch/: qtouch.c
src/rust/: Cargo.toml  bitbox02-cbindgen.toml  run-bindgen.sh  vendor.sh
src/rust/async_test/: Cargo.toml
src/rust/async_test/src/: lib.rs
src/rust/async_test_macros/: Cargo.toml
src/rust/async_test_macros/src/: lib.rs
src/rust/bitbox-aes/: Cargo.toml
src/rust/bitbox-aes/src/: lib.rs
src/rust/bitbox-lvgl-sys/: build.rs
src/rust/bitbox-lvgl/src/: lib.rs
src/rust/bitbox-lvgl/src/widgets/: canvas.rs  image.rs  keyboard.rs  mod.rs  obj.rs  span.rs
src/rust/bitbox-u2fhid/: Cargo.toml
src/rust/bitbox-u2fhid/src/: lib.rs
src/rust/bitbox-usb-report-queue/src/: lib.rs
src/rust/bitbox02/: Cargo.toml
src/rust/bitbox02-executor/: Cargo.toml
src/rust/bitbox02-executor/src/: lib.rs  static_executors.rs
src/rust/bitbox02-reactor/src/: lib.rs
src/rust/bitbox02-rust/: Cargo.toml  build.rs
src/rust/bitbox02-rust-c/: Cargo.toml
src/rust/bitbox02-rust-c/src/: async_usb.rs  lib.rs  workflow.rs
src/rust/bitbox02-rust/src/: bb02_async.rs  error.rs  hww.rs  keystore.rs  lib.rs  main_loop.rs  u2f.rs
src/rust/bitbox02-rust/src/commander/: bitboxbase.rs
src/rust/bitbox02-rust/src/hww/api/: backup.rs  bluetooth.rs
src/rust/bitbox02-rust/src/platform/bitboxbase/: config.rs  display.rs
src/rust/bitbox02-rust/src/workflow/: confirm.rs  password_enter.rs
src/rust/bitbox02-sys/: Cargo.toml  build.rs  wrapper.h
src/rust/bitbox02-testing-utils/: Cargo.toml
src/rust/bitbox02-testing-utils/src/: lib.rs
src/rust/bitbox02-tests/: Cargo.toml
src/rust/bitbox02-tests/src/: lib.rs
src/rust/bitbox02/src/: hal.rs  hid_hww.rs  hid_u2f.rs  lib.rs  salt.rs  u2f_packet.rs  u2fhid.rs  ui.rs  usb_packet.rs  util.rs
src/rust/bitbox02/src/hal/: system.rs  timer.rs  ui.rs
src/rust/bitbox02/src/ui/: types.rs  ui.rs
src/rust/bitbox03/src/: lib.rs  ui.rs
src/rust/bitbox03/src/ui/: enter_string.rs
src/rust/firmware/: Cargo.toml  build.rs  memory.x
src/rust/firmware/.cargo/: config.toml
src/rust/firmware/src/: main.rs
src/rust/util/: Cargo.toml
src/rust/util/src/: bb02_async.rs  bytes.rs  lib.rs  log.rs  name.rs  sha2.rs
src/sd_mmc/: sd_mmc_ext.c  sd_mmc_start.h
src/securechip/: securechip.c  securechip.h
src/touch/: gestures.c
src/u2f/: u2f_packet.c
src/ui/: screen_process.c  screen_process.h  screen_stack.c  screen_stack.h
src/ui/components/: confirm_gesture.c  rf_pwr.c  rf_pwr.h  trinary_input_string.c
src/ui/fonts/: NotoMono-Regular_7X12.c  NotoMono-Regular_7X12.h
src/ui/oled/: oled.c  oled_writer.c  sh1107.c  ssd1312.c
src/ui/ugui/: ugui.c  ugui.h
src/usb/: usb_frame.c  usb_processing.c
src/usb/class/hid/hww/: hid_hww.c  hid_hww.h
src/workflow/: pairing.c  verify_pub.c
test/device-test/: CMakeLists.txt
test/device-test/src/: test_oled_sidechannel.c  test_token_pub.c
test/hardware-fakes/: CMakeLists.txt
test/hardware-fakes/src/: eh_personality.c
test/simulator/: CMakeLists.txt  simulator.c
test/simulator-graphical-bb03/: CMakeLists.txt
test/simulator-graphical-bb03/src/: main.rs
test/simulator-ng/: CMakeLists.txt  Cargo.toml  build.rs
test/simulator-ng/.cargo/: config.toml
test/simulator-ng/src/: main.rs
test/unit-test/: CMakeLists.txt  test_sd.c  test_ugui.c  test_ui_components.c
