[package]
name = "simulator-ng"
version = "0.1.0"
edition = "2024"

[dependencies]
sdl2 = { version="0.37.0", default-features=false, features=["static-link", "use-pkgconfig", "image"] }
bitbox02-rust = { version="*", path="../../src/rust/bitbox02-rust" }
bitbox02 = { version="*", path="../../src/rust/bitbox02", features=["bindings"] }
