# SPDX-License-Identifier: Apache-2.0

[package]
name = "async_test"
version = "0.1.0"
edition = "2024"
description = "Drop-in replacement for tokio::test"
license = "Apache-2.0"

[dependencies]
async_test_macros = { path = "../async_test_macros" }
futures-lite = { workspace = true, features = ["std"] }
