[package]
name = "bitbox02-testing-utils"
version = "0.1.0"
authors = ["Niklas Dusenlund <niklas@dusenlund.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitbox02 = {path="../bitbox02"}
bitbox02-sys = {path="../bitbox02-sys"}
lazy_static = { version = "1.4.0"}
